# kswitch-devkit

./: .editorconfig  .gitignore  BYPASS_HARDENING.md  COMMERCIAL-USE.md  CONTRIBUTING.md  DEPENDENCY-LICENSE-POLICY.md  LICENSE  LICENSE.md  Makefile  NOTICE  PRIVACY.md  README.md  RELEASE-LEGAL-CHECKLIST.md  SECURITY.md  THIRD-PARTY-NOTICES.md  TRADEMARKS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  devkit_help.md  devkit_help.yml  docs_gap.md  docs_gap.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  devkit-images.yml
LICENSES/: Apache-2.0.txt  KSWITCH-DEVELOPER-EDITION-LICENSE.md  KSWITCH-DEVKIT-LICENSE.md
_schemas/: kswitch-project.json
_schemas/v1.32/: README.md
_schemas/v1.34/: README.md
_schemas/v1.37.0/: README.md
_schemas/v1.37.1/: README.md
devkit/: .env.example  BUNDLE_VERSION  FORBIDDEN_PUBLIC_PAYLOAD_GLOBS.txt  MANIFEST.json  MIGRATION_FROM_PILOT.md  Makefile  PUBLIC_PAYLOAD_ALLOWLIST.txt  README.md  TROUBLESHOOTING.md  docker-compose.yml
devkit/backups/: .gitignore
devkit/cli/: README.md  pkce.py
devkit/developer-edition/: licence_loader.py
devkit/devkit-entitlement/: licence_loader.py
devkit/images/: README.md
devkit/scripts/: doctor.sh  seed-reset.sh  seed.sh  smoke.sh  tls.sh  verify-developer-edition.py
devkit/seed/: initial-admin.tmpl  realm-export.json  spire-agent.conf  spire-server.conf
devkit/state/: .gitignore
devkit/tls/: .gitignore  README.md
docs/: auth-model.md  developer-edition-positioning.md  free-for-life-positioning.md  governed-invocation.md
examples/go/: register_agent.go
examples/python/: register_agent.py
examples/typescript/: register-agent.ts
go/: README.md  backcompat_test.go  go.mod  go.sum
go/kswitch/: auth.go  authzen.go  catalog.go  client.go  compliance.go  deny_reason.go  enforcement.go  ep221_decision_types_test.go  errors.go  events.go  governance.go  identity.go  interceptor.go  killswitch.go  no_network_decision_test.go  obo.go  obo_test.go  options.go  otel_enabled.go  otel_noop.go  path_resolution_test.go  policy.go  service.go  service_contract_test.go  types.go
mcp-server/: LICENSE  README.md  pyproject.toml  requirements-locked.txt
mcp-server/configs/: brain-claude-code.json  brain-local-python.json  cline.json  cursor.json  opencode.json  proxy-claude-code.json  proxy-cursor.json
mcp-server/configs/b005/: README.md  developer-claude-code.json  managed-claude-code.json  service-context.env.example
mcp-server/kswitch_brain_mcp/: __init__.py  client.py  remote.py  server.py
mcp-server/kswitch_mcp/: __init__.py  client.py  enforcement_client.py  local_audit.py  local_inspection.py  local_rules.py  mcp_descriptor_canonical.py  policy_cache.py  proxy.py  server.py  service_server.py  tls_utils.py
mcp-server/kswitch_mcp/data/: pij-signatures.json
mcp-server/tests/: test_b005_managed_profiles.py  test_brain_mcp.py  test_brain_mcp_execution_paths.py  test_brain_mcp_remote.py  test_local_pdp.py  test_proxy.py  test_proxy_descriptor_hash.py  test_service_mcp.py
python/: LICENSE  README.md  pyproject.toml  requirements-locked.txt
python/examples/: evaluate_access.py  fleet_monitoring.py  kill_switch.py  mcp_enforcement.py  register_agent.py
python/kswitch/: __init__.py  _anthropic_hook.py  auth.py  authzen.py  catalog.py  client.py  compliance.py  config.py  deny_reason.py  enforcement.py  events.py  exceptions.py  governance.py  identity.py  interceptor.py  invoke.py  killswitch.py  models.py  obo.py  policy.py  service.py  spire.py  wimse.py
python/kswitch/audit/: __init__.py  emitter.py  sender.py
python/kswitch/bundle/: __init__.py  local_cache.py
python/kswitch/context/: __init__.py  invalidation_sync.py  local_cache.py
python/kswitch/frameworks/: __init__.py  _base.py  anthropic.py  autogen.py  langchain.py  llamaindex.py  openai.py  semantic_kernel.py
python/kswitch/local_pdp/: __init__.py  evaluator.py
python/kswitch/revocation/: __init__.py  cache.py  sync.py
python/kswitch/sdk_adapter/: __init__.py  openai_agents.py
python/kswitch/tokens/: __init__.py  issuer.py  validator.py
python/tests/: parity_helpers.py  test_anthropic_hook.py  test_async_local_pdp.py  test_async_local_vs_sync.py  test_async_no_network_decision.py  test_audit_emitter.py  test_audit_event_ingestion.py  test_audit_sender.py  test_b005_service_contract.py  test_backcompat.py  test_client.py  test_context_invalidation_sync.py  test_governance.py  test_governed_invoke.py  test_live_local_vs_server_parity.py  test_local_bundle.py  test_local_context.py  test_local_deny_after_remote_revoke.py  test_local_pdp.py  test_models.py  test_obo_evidence.py  test_parity_helpers.py  test_python_local_vs_server.py  test_python_no_network_decision.py  test_python_sdk_event_flow.py  test_revocation_sync.py  test_wimse.py
python/tests/frameworks/: test_framework_adapters.py
reports/ep227/: WEBSITE-HANDOFF.md  ep227-validation-report.json  export-sanctions-review.md  package-inspection.md  privacy-data-flow-review.md  public-claims-matrix.md  release-evidence-index.md  sdk-ip-boundary.csv  sdk-ip-boundary.md
scripts/: validate_ep227_release.py  validate_legal_boundary.py
typescript/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
typescript/examples/: evaluate-access.ts  mcp-enforcement.ts  register-agent.ts
typescript/src/: auth.ts  authzen.ts  catalog.ts  client.ts  compliance.ts  denyReason.ts  enforcement.ts  errors.ts  events.ts  governance.ts  identity.ts  index.ts  interceptor.ts  killswitch.ts  obo.ts  policy.ts  service.ts  spire.ts  types.ts  wimse.ts
typescript/test/: test_audit_sink.test.ts  test_ep221_decision_types.test.ts  test_local_pdp.test.ts  test_local_vs_python_parity.test.ts  test_no_network_decision.test.ts  test_revocation_sync.test.ts  test_wimse.test.ts
typescript/tests/: backcompat.test.ts  client_base_url.test.ts  test_b005_service_contract.test.ts  test_obo_evidence.test.ts
(+60 files in other folders)
