[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kswitch-sdk"
version = "0.2.1"
description = "Python SDK for KSwitch.ai — AI agent governance, policy, and identity management"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "KSwitch.ai", email = "sdk@kswitch.ai" },
]
keywords = ["kswitch", "ai-governance", "agent", "mcp", "authzen", "spiffe", "cedar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Direct deps: pinned with PEP 440 compatible-release (~=) per Gate G5 decision
# (exact-pin direct deps at app level + ~= for library/SDK level to keep the SDK
# installable alongside consumers' own pins). See reports/security-fix-path-2026-04-24.md.
dependencies = [
    "httpx~=0.28.1",   # Latest within original >=0.25.0,<1.0 band
    "pydantic~=2.13.3",  # Latest within original >=2.0,<3.0 band
]

[project.optional-dependencies]
# Dev extras: compatible-release pins at current latest-verified versions.
dev = [
    "cryptography~=46.0.7",
    "pytest~=9.0.3",
    "pytest-asyncio~=1.3.0",
    "respx~=0.23.1",
    "ruff~=0.15.11",
    "mypy~=1.20.2",
]
# Framework extras: PINNED TO ORIGINAL LOWER-BOUND MAJOR/MINOR — the upstreams
# have moved 1+ majors since these were added (langchain 0.1→1.2, openai 1→2,
# pyautogen 0.2→0.10, semantic-kernel 0.9→1.41, llama-index-core 0.10→0.14).
# ESCALATE: operator to decide which extras to bump and smoke-test before widening.
langchain = [
    "langchain~=0.1.0",
]
openai = [
    "openai~=1.0.0",
]
autogen = [
    "pyautogen~=0.2.0",
]
semantic_kernel = [
    "semantic-kernel~=0.9.0",
]
llamaindex = [
    "llama-index-core~=0.10.0",
]
frameworks = [
    "langchain~=0.1.0",
    "openai~=1.0.0",
    "pyautogen~=0.2.0",
    "semantic-kernel~=0.9.0",
    "llama-index-core~=0.10.0",
]

[project.urls]
Homepage = "https://hub.kswitch.io"
Documentation = "https://hub.kswitch.io/sdk/python.html"
Repository = "https://github.com/KswitchDev/kswitch-devkit"
Issues = "https://github.com/KswitchDev/kswitch-devkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["kswitch"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
